--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2422,6 +2422,7 @@
   "WhisperTitle": "{0} <#ffffff>(ID <#00ffa5>{1}</color>) whispers to you:</color>",
   "DisableWhisperCommand": "Disable /whisper command",
   "DisableSpectateCommand": "Disable /spectate command",
+  "SpectateDisabled": "<#ff0000>X</color> The /spectate command is disabled in this lobby.",
   "WhisperDisabled": "<#ff0000>X</color> The /whisper command is disabled in this lobby.",
   "ThankYouForUsingEHR": "Thank you for using EHR!",
   "GMRoles": "<color=#ff5b70>【 ★ Roles ★ 】</color>",
@@ -2676,9 +2677,10 @@
   "Outside": "Outside",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
   "Error.MeetingException": "Error: {0}\\r\\nPlease use SHIFT+M+ENTER to end the meeting",
-  "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment({0})",
-  "Error.InvalidColor": "Error: Only default colors are available",
-  "Error.InvalidColorPreventStart": "Other players are not allowed to use other colors, otherwise it will result in a serious error",
+  "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment ({0})",
+  "Error.InvalidColor": "Error: Only default colors are available - this means someone had fortegreen color in the lobby, which causes disconnects, so it's best to kick them",
+  "Error.InvalidColorPreventStart": "Other players are not allowed to use other colors (e.g. fortegreen), otherwise it will result in a serious error",
+  "VersionMismatch": "{0} has a different version of the mod installed",
   "ErrorLevel1": "Bugs may occur.",
   "ErrorLevel2": "This can cause serious issues with the game.",
   "ErrorLevel3": "This version shouldn't have been released.",
@@ -2808,6 +2810,7 @@
   "AntiAdminerVI": "<size=1.7><color=#ffff00>⚠ Vitals Monitor ⚠</color></size>",
   "AntiAdminerDL": "<size=1.7><color=#ffff00>⚠ DoorLog ⚠</color></size>",
   "AntiAdminerCA": "<size=1.7><color=#ffff00>⚠ Security Cameras ⚠</color></size>",
+  "WinsCountTitle": "Number of wins in this game mode",
   "Roles": "Roles",
   "Settings": "Settings",
   "Addons": "Add-Ons",
@@ -2956,9 +2959,9 @@
   "Disabled": "Disabled",
   "FailToTrack": "Failed To Track",
   "CanGuessTarget": "Can Guess their Target",
-  "UsePhantomBasis": "Use Phantom Basis for some roles (DEPRECATED, use Unshift Trigger ^^)",
+  "UsePhantomBasis": "Use Vanish Button (Phantom basis) as Ability Trigger",
   "UsePhantomBasisForNKs": "Even for <#ffab1b>Neutral</color> <#ff1919>Killing</color> (Desynced) roles <#ffff00>(EXPERIMENTAL)</color>",
-  "UseUnshiftTrigger": "Use Unshift Button as Ability Trigger",
+  "UseUnshiftTrigger": "Use Unshift Button (Shapeshifter basis) as Ability Trigger",
   "UseUnshiftTriggerForNKs": "Even for <#ffab1b>Neutral</color> <#ff1919>Killing</color> (Desynced) roles <#ffff00>(EXPERIMENTAL)</color>",
   "Mad-": "Mad ",
   "Charmed-": "Charmed ",
@@ -3837,6 +3840,25 @@
   "HHNumOfTargets": "Number of Targets",
   "HHMaxKCD": "Maximum Kill Cooldown",
   "HHMinKCD": "Minimum Kill Cooldown",
+  "Stasis": "Stasis",
+  "StasisInfo": "Freeze Time",
+  "StasisInfoLong": "(Impostors):\\nAs the Stasis, you can shapeshift/pet/vanish to 'freeze time'. That means, all players will be frozen and blind, and no one will be able to do anything. Depending on the settings, the blinding and freezing may exclude other impostor-teamed players.",
+  "Stasis.AffectsOtherImpostors": "Time Freezing Affects Other <#ff1919>Impostors</color>",
+  "Stasis.TimeFrozenNotify": "Time Frozen",
+  "Amogus": "Amogus",
+  "AmogusInfo": "You're the sussy baka",
+  "AmogusInfoLong": "(Neutrals):\\nAs the Amogus, you can thank Rabek for the role idea. Lol.\\nAnyway, Amogus is a neutral killer that can use shift/vanish/pet button to switch between regular and amogus form. You can vent and you have impostor vision. You can only kill in amogus form. You can stay in amogus form for a limited amount of time. After killing someone, your amogus form upgrades. These are the levels:\\n<b>Amogus -> Sugoma -> Sumogus -> Suspicious Sus -> Ultimate Sus</b>\\nWhen you're in amogus form, you're anonymous and look different depending on your level. Levels also give extra abilities that work only in amogus form.<size=70%>\\n\\nAmogus: Starting level, regular white amogus without extra special abilities.\\nSugoma: Upside down amogus. Is faster, but your controls are inverted.\\nSumogus: Wide amogus with two visors. No one can interact with you and you have sugoma ability, but your controls aren't inverted anymore.\\nSuspicious Sus: Amogus that is robot. You have all abilities of Sumogus and in addition you can see an arrow to every player.\\nUltimate Sus: Red amogus. Has all abilities of lower levels. Your kill cooldown is reduced by 50%. If you kill someone, you get additional vote(s).</size>",
+  "Amogus.StartingLevel": "Starting Level",
+  "Amogus.SugomaSpeed": "Speed at Sugoma level",
+  "Amogus.SuspiciousSusArrowsToBodies": "At Suspicious Sus level, when someone dies, the arrow points at the dead body instead of disappearing",
+  "Amogus.UltimateSusVotesPerKill": "Number of Extra Votes gained for every kill, when the level is Ultimate Sus",
+  "Amogus.Suffix": "<#00ffa5>Current level:</color> <b>{0}</b>",
+  "Amogus.Levels.Amogus": "Amogus",
+  "Amogus.Levels.Sugoma": "Sugoma",
+  "Amogus.Levels.Sumogus": "Sumogus",
+  "Amogus.Levels.SuspiciousSus": "Suspicious Sus",
+  "Amogus.Levels.UltimateSus": "Ultimate Sus",
+  "ExtraVotesPT": "<#00a5ff>(<#00ffff>+<#00ffa5>{0}</color> votes</color>)</color>",
   "Rabbit": "Rabbit",
   "RabbitInfo": "Get Clues Toward Impostor Locations",
   "RabbitInfoLong": "(Crewmates):\\nAs the Rabbit, each time you complete a task, you see an arrow pointing towards a random impostor for 5 seconds.\\nNote: This ability may only activate after you've completed a set number of tasks.",
@@ -4111,7 +4133,7 @@
   "DeliverCooldown": "Deliver Cooldown",
   "NecroGuesser": "Necro-Guesser",
   "NecroGuesserInfo": "Guess Dead Players' Roles",
-  "NecroGuesserInfoLong": "(Neutrals):\\nAs the Necro-Guesser, your job is to guess the roles of dead players. Use <b>/bt {id} {role}</b> to guess. {id} is the player's ID, biew them by using /id, {role} is the player's role. You need to guess a certain amount of dead players' roles to win with the winning team at the end.",
+  "NecroGuesserInfoLong": "(Neutrals):\\nAs the Necro-Guesser, your job is to guess the roles of dead players. Use <b>/bt {id} {role}</b> to guess. {id} is the player's ID, view them by using /id, {role} is the player's role. You need to guess a certain amount of dead players' roles to win with the winning team at the end.",
   "NecroGuesser.NumGuessesToWin": "Number of Guesses Required to Win",
   "NecroGuesser.GuessCorrect": "Your guess was <#00ff00>correct</color>!",
   "NecroGuesser.GuessIncorrect": "Your guess was <#ff0000>incorrect</color>!",
